Commit changed public files

--- a/public/case-studies/5-lawson/index.html
+++ b/public/case-studies/5-lawson/index.html
@@ -216,7 +216,7 @@
       </foreignObject>
     </switch>
   </svg>EPUB <span class="quire-link-list__note">— 18.8 MB</span></a></li>
-  <li><a href="http://www.getty.edu/publications/keepitmoving/downloads/RivencBek_KeepItMoving.mobi" target="_blank" rel="alternate" type="application/mobi">MOBI/KINDLE</a></li>
+  <li><a href="http://www.getty.edu/publications/keepitmoving/downloads/RivencBek_KeepItMoving.mobi" target="_blank" rel="alternate" type="application/mobi">MOBI/KINDLE <span class="quire-link-list__note">— 42.7 MB</span></a></li>
   <li><a href="http://www.getty.edu/publications/keepitmoving/downloads/RivencBek_KeepItMoving.pdf" target="_blank" rel="alternate" type="application/pdf">PDF <span class="quire-link-list__note">— 6.1 MB</span></a></li>
   <li><a href="http://shop.getty.edu/products/keep-it-moving-978-1606065372" target="_blank" rel="alternate" type="print"><svg class="quire-link-list__icon" width="1em" height="1em">
     <switch>
